# section-obj-builder

./: .gitignore  README.md  export-all-sections.ps1  main.py  pyproject.toml
section data/: EA.csv  PFC.csv  SHS.csv  UB.csv  UC.csv
